styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
    padding: 0;
    margin: 0;
    font-family:
        -apple-system,
        BlinkMacSystemFont,
        Segoe UI,
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        Fira Sans,
        Droid Sans,
        Helvetica Neue,
        sans-serif;
}

.body-padding {
    padding: 0.125rem 2.5rem;
}

div {
    display: block;
}

a {
    color: inherit;
    text-decoration: none;
    color: brown;
}
a:hover {
    text-decoration: underline;
}

button, button[type=submit] {
    box-shadow:
        rgb(0 0 0 / 16%) 0px 3px 6px,
        rgb(0 0 0 / 23%) 0px 3px 6px;
    padding: 5px 10px;
    border-radius: 10px;
    background-color: #e04c4c;
    color: white;
}

button:hover {
    background-color: #99e265;
    transform: scale(1.05);
}
button:active {
    transform: scale(1);
}
button:disabled {
    background-color: grey;
    transform: none;
}

.item {
    background-color: rgba(255, 255, 255, 0.7);
    padding: 10px;
    border-radius: 20px;
    border: 1px solid brown;
    margin-bottom: 10px;
}

.header {
    background-color: rgba(255, 255, 255, 0.7);
    border: 0.5px solid #99e265;
    border-radius: 10px;
    margin-bottom: 20px;
    align-items: center;
    font-size: x-large;
    transition: all 0.3s ease-in-out;
}

.header div {
    transition: all 0.3s ease-in-out;
}

.bg-shadow {
    background-color: rgba(255, 255, 255, 0.5);
    border-radius: 10px;
    width: auto;
    display: inline-block;
}

.footer {
    background-color: rgba(229, 231, 235);
}

h1 {
    font-size: x-large;
    padding-bottom: 10px;
}

h2 {
    font-size: large;
    padding-bottom: 5px;
}

hr {
    margin: 5px 0px;
}

input {
    border-bottom: 1px solid grey;
    margin: 0px 0px;
    background-color: transparent;
}

input:focus {
    outline-width: 0;
    outline: none;
}

* {
    box-sizing: border-box;
}

/* SPINNER */
.loading {
    display: inline-block;
    position: relative;
    width: 80px;
    height: 80px;
}
.loading div {
    position: absolute;
    top: 33px;
    width: 13px;
    height: 13px;
    border-radius: 50%;
    background: #fff;
    animation-timing-function: cubic-bezier(0, 1, 1, 0);
}
.loading div:nth-child(1) {
    left: 8px;
    animation: lds-ellipsis1 0.6s infinite;
}
.loading div:nth-child(2) {
    left: 8px;
    animation: lds-ellipsis2 0.6s infinite;
}
.loading div:nth-child(3) {
    left: 32px;
    animation: lds-ellipsis2 0.6s infinite;
}
.loading div:nth-child(4) {
    left: 56px;
    animation: lds-ellipsis3 0.6s infinite;
}
@keyframes lds-ellipsis1 {
    0% {
        transform: scale(0);
    }
    100% {
        transform: scale(1);
    }
}
@keyframes lds-ellipsis3 {
    0% {
        transform: scale(1);
    }
    100% {
        transform: scale(0);
    }
}
@keyframes lds-ellipsis2 {
    0% {
        transform: translate(0, 0);
    }
    100% {
        transform: translate(24px, 0);
    }
}
/* END OF SPINNER */

/* TOOLTIP */
.tooltip-container {
    position: relative;
  }
  
  /* Tooltip text */
  .tooltip-container .tooltip {
    visibility: hidden;
    width: 120px;
    background-color: #99e265;
    color: #fff;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;
  
    /* Position the tooltip text */
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: 50%;
    margin-left: -60px;
  
    /* Fade in tooltip */
    opacity: 0;
    transition: opacity 0.3s;
  }
  
  /* Tooltip arrow */
  .tooltip-container .tooltip::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: #555 transparent transparent transparent;
  }
  /* END OF TOOLTIP */
  
  /* Show the tooltip text when you mouse over the tooltip container */
  .tooltip-container:hover .tooltip {
    visibility: visible;
    opacity: 1;
  }

@media screen and (max-width: 640px) {
    .body-padding {
        padding: 0rem 1rem;
    }

    button {
        padding: 5px 5px;
        margin: 5px 5px;
    }

    .bg-shadow {
        background-color: rgba(255, 255, 255, 0.5);
        border-radius: 10px;
        width: auto;
        display: block;
    }
}

